force-app/main/default/objects/Work_Order__c/fields/Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Type__c</fullName>
    <label>Assistance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Support</fullName>
                <default>true</default>
                <label>Physical Support</label>
            </value>
            <value>
                <fullName>Online Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>