force-app/main/default/objects/Work_Order__c/fields/Handled_by__c.field-meta.xml
<CustomField>
    <fullName>Handled_by__c</fullName>
    <formula>Technician__r.FirstName +  Technician__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handled by</label>
    <type>Text</type>
</CustomField>