force-app/main/default/objects/Work_Order__c/fields/Is_Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Contact__c</fullName>
    <formula>$User.Id =  Technician__r.RelatedUser__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active Contact</label>
    <type>Checkbox</type>
</CustomField>