force-app/main/default/objects/Work_Order__c/fields/Schedule_Days_Picker__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Days_Picker__c</fullName>
    <label>Schedule Days Picker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>