force-app/main/default/objects/Work_Order__c/fields/Schedule_Picker__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Picker__c</fullName>
    <label>Schedule Picker</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>07:00 to 09:00</fullName>
                <default>true</default>
                <label>07:00 to 09:00</label>
            </value>
            <value>
                <fullName>09:00 to 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 to 13:00</fullName>
            </value>
            <value>
                <fullName>13:00 to 15:00</fullName>
            </value>
            <value>
                <fullName>15:00 to 17:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>