force-app/main/default/objects/Work_Order__c/recordTypes/Initial_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Initial_Work_Order</fullName>
    <active>true</active>
    <label>Initial Work Order</label>
</RecordType>