force-app/main/default/objects/Work_Order__c/validationRules/Validate_Case_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Case_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    NOT(ISPICKVAL( Case__r.Status, &apos;Working&apos;)),
    ISNEW()
)</errorConditionFormula>
    <errorMessage>Work order must be tied to a Case with Status set as &apos;Working&apos;</errorMessage>
</ValidationRule>