force-app/main/default/objects/Work_Order__c/listViews/My_Active_Work_Orders.listView-meta.xml
<ListView>
    <fullName>My_Active_Work_Orders</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Work Orders</label>
    <sharedTo>
        <role>CEO</role>
        <role>Call_Center_Agent</role>
        <role>Manager</role>
        <role>Technician</role>
    </sharedTo>
</ListView>